# paulista

./: .gitignore  LICENSE  meson.build
include/paulista/: paulista-collision.hpp  paulista-dimension.hpp  paulista-domain.hpp  paulista-element.hpp  paulista-geometry.hpp  paulista-graph.hpp  paulista-point.hpp  paulista-simplex.hpp  paulista-sparse.hpp  paulista-stiffness.hpp  paulista.hpp
include/paulista/geometry/: paulista-dimension.hpp  paulista-graph.hpp  paulista-point.hpp
source/: paulista-dimension.cpp  paulista-graph.cpp  paulista-sparse.cpp
subprojects/: rapidcheck.wrap
tests/: collision.cpp  dimension.cpp  domain-area.cpp  domain-centroid.cpp  domain-visitor.cpp  domain-volume.cpp  domain.cpp  graph.cpp  meson.build  point.cpp  sparse.cpp  stiffness.cpp  tetrahedron.cpp  triangle.cpp
